...
          builder: (context, _) {
            return const HistoryView();
          }
        );
      case BottomNavigation.event:
        return const Center(
          child: Text("Event"),
        );
      default:
        return const DashboardView();
    }
  }

...
            mainAxisAlignment: MainAxisAlignment.spaceAround,
            children: [
              buildMenu(
                context: context,
                stringKey: "navHome",
                icon: CustomIcons.home, 
                title: "Home", 
                isActive: state.model.currentPage == BottomNavigation.home, 
                onPressed: () {
                  context.read<MainBloc>().add(MainSetActiveBottomNavigation(currentPage: BottomNavigation.home));
                }
              ),
              buildMenu(
                context: context,
                stringKey: "navEvent",
                icon: CustomIcons.calendar,
                title: "Event",
                isActive: state.model.currentPage == BottomNavigation.event,
                onPressed: () {
                  context.read<MainBloc>().add(MainSetActiveBottomNavigation(currentPage: BottomNavigation.event));
                }
              ),
              const PlusButton(
                key: Key("plusButton"),
              ),
              buildMenu(
                context: context,
                stringKey: "navHistory",
                icon: CustomIcons.history,
                title: "History",
                isActive: state.model.currentPage == BottomNavigation.history,
                onPressed: () {
                  context.read<MainBloc>().add(MainSetActiveBottomNavigation(currentPage: BottomNavigation.history));
                }
              ),
              buildMenu(
                context: context,
                stringKey: "navSetting",
                icon: CustomIcons.setting,
                title: "Settings",
                isActive: state.model.currentPage == BottomNavigation.setting,
                onPressed: () {
                  context.read<MainBloc>().add(MainSetActiveBottomNavigation(currentPage: BottomNavigation.setting));
                }
              )
            ],
...
